force-app/main/default/objects/Survey__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <length>20</length>
    <type>Text</type>
</CustomField>