force-app/main/default/objects/Survey__c/fields/Conditional_01_Response__c.field-meta.xml
<CustomField>
    <fullName>Conditional_01_Response__c</fullName>
    <inlineHelpText>Employer Post-Institute Question 2c
Retention Pre-Institute Question 12</inlineHelpText>
    <label>Conditional 01 Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>