force-app/main/default/objects/Survey__c/fields/Conditional_02_Response__c.field-meta.xml
<CustomField>
    <fullName>Conditional_02_Response__c</fullName>
    <inlineHelpText>Employer Institute Question 3c
Inclusion Action Lab Pre-Survey Question 17</inlineHelpText>
    <label>Conditional 02 Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>