force-app/main/default/objects/Survey__c/fields/Conditional_03_Response__c.field-meta.xml
<CustomField>
    <fullName>Conditional_03_Response__c</fullName>
    <inlineHelpText>Employer Institute Question 4c</inlineHelpText>
    <label>Conditional 03 Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>