force-app/main/default/objects/Survey__c/fields/Created_By_External_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_By_External_Form__c</fullName>
    <label>Created By, External Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>