force-app/main/default/objects/Survey__c/fields/Created_By_Summary__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Summary__c</fullName>
    <formula>if (not (isblank ( Created_By_External_Form__c )), Created_By_External_Form__c , CreatedBy.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By, Summary</label>
    <type>Text</type>
</CustomField>