force-app/main/default/objects/Survey__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>if ( Rating_Category__c = &quot;Detractor&quot;, 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>