force-app/main/default/objects/Survey__c/fields/Institute_Rating__c.field-meta.xml
<CustomField>
    <fullName>Institute_Rating__c</fullName>
    <label>Institute Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>