force-app/main/default/objects/Survey__c/fields/Lab_Session__c.field-meta.xml
<CustomField>
    <fullName>Lab_Session__c</fullName>
    <label>Lab Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>