force-app/main/default/objects/Survey__c/fields/of_Completed_Financial_Assessments__c.field-meta.xml
<CustomField>
    <fullName>of_Completed_Financial_Assessments__c</fullName>
    <label># of Completed Financial Assessments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>