force-app/main/default/objects/Survey__c/fields/of_Increased_FICO_Scores__c.field-meta.xml
<CustomField>
    <fullName>of_Increased_FICO_Scores__c</fullName>
    <label># of Increased FICO Scores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>