force-app/main/default/objects/Survey__c/fields/of_Increased_Well_Beings__c.field-meta.xml
<CustomField>
    <fullName>of_Increased_Well_Beings__c</fullName>
    <label># of Increased Well-Beings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>