force-app/main/default/objects/Survey__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>if ( Rating_Category__c = &quot;Promoter&quot;, 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>