force-app/main/default/objects/Survey__c/fields/Question_01__c.field-meta.xml
<CustomField>
    <fullName>Question_01__c</fullName>
    <formula>Survey_Form__r.Question_01__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 01</label>
    <type>Text</type>
</CustomField>