force-app/main/default/objects/Survey__c/fields/Question_02__c.field-meta.xml
<CustomField>
    <fullName>Question_02__c</fullName>
    <formula>Survey_Form__r.Question_02__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 02</label>
    <type>Text</type>
</CustomField>