force-app/main/default/objects/Survey__c/fields/Question_02_Response__c.field-meta.xml
<CustomField>
    <fullName>Question_02_Response__c</fullName>
    <label>Question 02 Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>