force-app/main/default/objects/Survey__c/fields/Question_03__c.field-meta.xml
<CustomField>
    <fullName>Question_03__c</fullName>
    <formula>Survey_Form__r.Question_03__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 03</label>
    <type>Text</type>
</CustomField>