force-app/main/default/objects/Survey__c/fields/Rating_Category__c.field-meta.xml
<CustomField>
    <fullName>Rating_Category__c</fullName>
    <formula>if (Institute_Rating__c &gt;= 9, &quot;Promoter&quot;,

if (Institute_Rating__c &lt;= 6, &quot;Detractor&quot;,

&quot;Neutral&quot;))</formula>
    <label>Rating Category</label>
    <type>Text</type>
</CustomField>