force-app/main/default/objects/Survey__c/fields/Survey_Form__c.field-meta.xml
<CustomField>
    <fullName>Survey_Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey Form</label>
    <referenceTo>Evaluation_Form__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>