force-app/main/default/objects/Survey__c/recordTypes/Employer_Post_Institute_Survey_2_0.recordType-meta.xml
<RecordType>
    <fullName>Employer_Post_Institute_Survey_2_0</fullName>
    <active>false</active>
    <label>Employer Post-Sourcing Institute Survey 2.0</label>
</RecordType>