force-app/main/default/objects/Survey__c/recordTypes/Financial_Coach_Metrics.recordType-meta.xml
<RecordType>
    <fullName>Financial_Coach_Metrics</fullName>
    <active>true</active>
    <label>Financial Coach Metrics</label>
</RecordType>