force-app/main/default/objects/Survey__c/recordTypes/Inclusion_Action_Lab_Pre_Survey_2_0_Short.recordType-meta.xml
<RecordType>
    <fullName>Inclusion_Action_Lab_Pre_Survey_2_0_Short</fullName>
    <active>true</active>
    <label>Inclusion Action Lab Pre-Survey 2.0 (Short)</label>
</RecordType>