force-app/main/default/objects/Survey__c/recordTypes/Inclusion_Action_Lab_Pulse_Survey_1_0.recordType-meta.xml
<RecordType>
    <fullName>Inclusion_Action_Lab_Pulse_Survey_1_0</fullName>
    <active>true</active>
    <label>Inclusion Action Lab Pulse Survey 1.0</label>
</RecordType>