force-app/main/default/objects/Survey__c/recordTypes/Individual_Retention_Post_Institute_Survey_2_0.recordType-meta.xml
<RecordType>
    <fullName>Individual_Retention_Post_Institute_Survey_2_0</fullName>
    <active>true</active>
    <label>Individual Post-Retention Institute Survey 2.0</label>
</RecordType>