force-app/main/default/objects/Survey__c/listViews/Employer_Post_Institute_Survey_1_0.listView-meta.xml
<ListView>
    <fullName>Employer_Post_Institute_Survey_1_0</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Employer_Post_Institute_Survey_1_0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Employer_Post_Institute_Survey_2_0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Employer_Post_Sourcing_Institute_Survey_3_0</value>
    </filters>
    <label>Employer Post-Sourcing Institute Survey</label>
    <language>en_US</language>
</ListView>