force-app/main/default/objects/Survey__c/listViews/Employer_Post_Retention_Institute_Survey.listView-meta.xml
<ListView>
    <fullName>Employer_Post_Retention_Institute_Survey</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Employer_Retention_Post_Institute_Survey_2_0</value>
    </filters>
    <label>Employer Post-Retention Institute Survey</label>
    <language>en_US</language>
</ListView>