force-app/main/default/objects/Survey__c/listViews/Inclusion_Action_Lab_Pre_Survey.listView-meta.xml
<ListView>
    <fullName>Inclusion_Action_Lab_Pre_Survey</fullName>
    <columns>NAME</columns>
    <columns>Survey_Form__c</columns>
    <columns>Date__c</columns>
    <columns>Organization__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Inclusion_Action_Lab_Pre_Survey_1_0,Survey__c.Inclusion_Action_Lab_Pre_Survey_2_0_Short</value>
    </filters>
    <label>Inclusion Action Lab Pre-Survey</label>
    <language>en_US</language>
</ListView>